# src/v1/modules/authentication/swagger/router.yaml
@@ -1,29 +1,16 @@
 paths:
-  /bank-transactions:
-    post:
+  /authentication:
+    get: # GET ALL USERS
       tags:
-        - Bank
-      name: Process bank-
-      summary: Get bank-transaction from bridgefund-foun.
-      operationId: bankTransacess
-      consumes:
-        - application/json
+        - Users
+      name: User Details
+      summary: Get all user details
+      # operationId: getUsers
       produces:
         - application/json
-      parameters:
-        - in: body
-          name: body
-          description: Sample request of pstatement
-          required: true
-          schema:
-            type: object
-            properties:
-              transactionDate:
-                type: date
-                example: "2019-01-01"
       responses:
         200:
-          description: success
+          description: A list of users
           schema:
             type: object
             properties:
@@ -31,21 +18,35 @@ paths:
                 type: integer
                 example: 200
               data:
+                type: array
+                items:
+                  $ref: "#/definitions/User"
+              success:
+                type: "boolean"
+                example: true
+        400:
+          description: Band Request
+          schema:
+            type: "object"
+            properties:
+              code:
+                type: integer
+                example: 400
+              message:
+                type: string
+                example: BAD_REQUEST
+              error:
                 type: object
                 properties:
-                  CR:
-                    type: array
-                    example: ["5e4148b308ded5ad8a9515a9"]
-                    items:
-                      type: string
-                  DT:
-                    type: array
-                    example: ["5e4148b308ded5ad8a9515b9"]
-                    items:
-                      type: string
+                  errmsg:
+                    type: string
+                    example: string
+                  code:
+                    type: integer
+                    example: 400
               success:
-                type: boolean
-                example: true
+                type: "boolean"
+                example: false
         404:
           description: Not Found
           schema:
@@ -62,7 +63,7 @@ paths:
                 properties:
                   errmsg:
                     type: string
-                    example: Route/v1/bank-transactions/processrtrter Not found.
+                    example: Route /v1/employees not found
                   code:
                     type: integer
                     example: 404
@@ -85,100 +86,7 @@ paths:
                 properties:
                   errmsg:
                     type: string
-                    example: not found
-                  code:
-                    type: integer
-                    example: 500
-              success:
-                type: "boolean"
-                example: false
-  /bank-transactions/reverse:
-    post:
-      tags:
-        - Bank transactions
-      name: Reverse bank-transactions
-      summary: Reverse all process sme-loan-repayment-direct-debit and remove all process bank-transactions.
-      operationId: bankTransactionsReverse
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      parameters:
-        - in: body
-          name: body
-          description: Sample request of re-process of bank-statement
-          required: true
-          schema:
-            type: object
-            properties:
-              transactionDate:
-                type: date
-                example: "2019-01-02"
-      responses:
-        200:
-          description: success
-          schema:
-            type: object
-            properties:
-              code:
-                type: integer
-                example: 200
-              data:
-                type: object
-                properties:
-                  CR:
-                    type: array
-                    example: ["5e4148b308ded5ad8a9515a9"]
-                    items:
-                      type: string
-                  DT:
-                    type: array
-                    example: ["5e4148b308ded5ad8a9515b9"]
-                    items:
-                      type: string
-              success:
-                type: boolean
-                example: true
-        404:
-          description: Not Found
-          schema:
-            type: "object"
-            properties:
-              code:
-                type: integer
-                example: 404
-              message:
-                type: string
-                example: NOT_FOUND
-              error:
-                type: object
-                properties:
-                  errmsg:
-                    type: string
-                    example: Route/v1/bank-transactions/processrtrter Not found.
-                  code:
-                    type: integer
-                    example: 404
-              success:
-                type: "boolean"
-                example: false
-        500:
-          description: Internal Server Error
-          schema:
-            type: "object"
-            properties:
-              code:
-                type: integer
-                example: 500
-              message:
-                type: string
-                example: INTERNAL_SERVER_ERROR
-              error:
-                type: object
-                properties:
-                  errmsg:
-                    type: string
-                    example: not found
+                    example: string
                   code:
                     type: integer
                     example: 500
