# src/v1/router.js
@@ -1,8 +1,10 @@
 const express = require('express');
 const router = express.Router();
 
-// const { AuthenticationRoutes } = require('./modules/authentication');
-const { crudRoutes } = require('./modules/crud');
+// const Auth = require('./modules/authentication/middleware')
+
+const { UserRoutes } = require('./modules/authentication');
+const { EmployeeRoutes } = require('./modules/employee');
 
 const { initRoute } = require('../init');
 
@@ -11,9 +13,9 @@ const init = initRoute('Awesome: >>>>> NodeJs Backend Service Template [v1] API 
 router.get('/', init);
 
 // Check is valid end point
-// router.use(Auth.isAuthorized);
+// router.use(Auth.protect);
 
-// router.use('/authentication', AuthenticationRoutes);
-router.use('/crud', crudRoutes);
+router.use('/authentication', UserRoutes);
+router.use('/employees', EmployeeRoutes);
 
 module.exports = router;
